# docs/swagger.json
@@ -792,6 +792,38 @@
                 }
             }
         },
+        "/upload": {
+            "post": {
+                "description": "Upload file",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload"
+                ],
+                "summary": "Upload file",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/interceptor.ResponseSuccess-string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/approveRegistration": {
             "get": {
                 "description": "Approve user registration",
@@ -1576,6 +1608,22 @@
                 },
                 "data": {
                     "$ref": "#/definitions/model.User"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Success"
+                }
+            }
+        },
+        "interceptor.ResponseSuccess-string": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "type": "string"
                 },
                 "message": {
                     "type": "string",
